--- a/src/app/story/story.component.html
+++ b/src/app/story/story.component.html
@@ -60,7 +60,7 @@
     <div class="container" *ngIf='hint2'>
       <p>
           <ngb-alert [dismissible]="false" type="warning">
-            N, S maybe some type of directions.
+            N, E maybe some type of directions.
           </ngb-alert>
         </p>
     </div>
