--- a/src/app/story/story.component.html
+++ b/src/app/story/story.component.html
@@ -158,12 +158,12 @@
                     <ngb-panel title="Chapter 5" id="ngb-panel-4" type="dark">
                       <ng-template ngbPanelContent>
                         
-                      Good job, sachit. We searched the property and found a small vault. But in order to open the vault, we need to put a 3 digit code in it. We also have 2 lines written behind it
+                      Good job, {{name}}. We searched the property and found a small vault. But in order to open the vault, we need to put a 3 digit code in it. We also have 2 lines written behind it
 
                         <p>Vault</p>
                         <p>_ _ _</p>
                         <p style="font-weight: bold;">1.There is a number in my name. I was the last supreme pontiff not even a bishop</p>
-                        <p style="font-weight: bold;">2.last one to step down in nearly 600 years. How long did I upheld my duty(approx)</p>
+                        <p style="font-weight: bold;">2.last one to step down in nearly 600 years. How long did I upheld my duty(complete)</p>
                 
                         <p style="font-style: italic;">What is the code</p>
                       </ng-template>
