--- a/src/app/final/final.component.html
+++ b/src/app/final/final.component.html
@@ -7,6 +7,7 @@
     </form>
 </div>
 <div class="container">
+  <h3 style="color: white;" *ngIf='ansfin'>Lives {{score}}</h3>
     <ngb-accordion #acc6="ngbAccordion" activeIds="ngb-panel-5" *ngIf='ansfin' type="dark">
       <ngb-panel title="Chapter 6" id="ngb-panel-5" type="dark">
         <ng-template ngbPanelContent>
