--- a/src/app/story/story.component.html
+++ b/src/app/story/story.component.html
@@ -1,5 +1,6 @@
 <!-- Question -->
 <div class="container" style="margin-bottom: 2%;" *ngIf='ans0'>
+  <h3 style="color: white;">Lives {{score}}</h3>
     <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0"  type="dark">
       <ngb-panel title="Chapter 1" type="dark">
         <ng-template ngbPanelContent>
@@ -37,6 +38,7 @@
   </div>
   <!-- Question -->
   <div class="container">
+    <h3 style="color: white;" *ngIf='ans1'>Lives {{score}}</h3>
   <ngb-accordion #acc1="ngbAccordion" activeIds="ngb-panel-1" *ngIf='ans1' type="dark">
     <ngb-panel title="Chapter 2" id="ngb-panel-1" type="dark">
       <ng-template ngbPanelContent>
@@ -76,6 +78,7 @@
     </div>
     <!-- Question -->
     <div class="container">
+      <h3 style="color: white;" *ngIf='ans2'>Lives {{score}}</h3>
       <ngb-accordion #acc2="ngbAccordion" activeIds="ngb-panel-2" *ngIf='ans2' type="dark">
         <ngb-panel title="Chapter 3" id="ngb-panel-2" type="dark">
           <ng-template ngbPanelContent>
@@ -119,6 +122,7 @@
         </div>
         <!-- Question -->
             <div class="container">
+              <h3 style="color: white;" *ngIf='ans3'>Lives {{score}}</h3>
               <ngb-accordion #acc4="ngbAccordion" activeIds="ngb-panel-3" *ngIf='ans3' type="dark">
                 <ngb-panel title="Chapter 4" id="ngb-panel-3" type="dark">
                   <ng-template ngbPanelContent>
@@ -154,6 +158,7 @@
                 </div>
                 <!-- Question -->
                 <div class="container">
+                  <h3 style="color: white;" *ngIf='ans4'>Lives {{score}}</h3>
                   <ngb-accordion #acc5="ngbAccordion" activeIds="ngb-panel-4" *ngIf='ans4' type="dark">
                     <ngb-panel title="Chapter 5" id="ngb-panel-4" type="dark">
                       <ng-template ngbPanelContent>
